# Python-Yash

src/company_app/: main.py
src/cookie-temp/: cookiecutter.json
src/cookie-temp/{{cookiecutter.project_name}}/: README.md
src/day1/: practice.py
src/day2/: practice2.py
src/day3/: practice3.py
src/day4/: practice4.py
src/day5/: pratice5.py  random.py
src/day6/: student.py  test_student.py  try.py
src/day6/student-data/: README.md  main.py
src/day7/cookie-temp/{{cookiecutter.project_name}}/: main.py
src/day7/employee_package/: main.py  pyproject.toml
src/day7/employee_package/employee/: __init__.py
src/day7/employee_package/employee_package.egg-info/: PKG-INFO
src/employee_package/employee/: employee.py
src/employee_package/employee_package.egg-info/: SOURCES.txt
src/test/: pyproject.toml  requirements.txt  test_student.py  tox.ini
src/test/student_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
